# sih-health-chatbot-backend

./: .dockerignore  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  FULL_ROADMAP.md  IMPLEMENTATION.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_alert_system.py  test_with_real_users.py
.github/workflows/: ci.yml  contributors.yml
docker/: Dockerfile  Dockerfile.dev
docs/: API_Documentation.md
scripts/: start-app.bat  start-app.sh
src/: config.py  main.py
src/db/: models.py
src/routers/: admin.py  whatsapp.py
src/services/: message_service.py  user_service.py
src/utils/: demo_setup.py  demo_utils.py  error_handlers.py  middleware.py  webhook_security.py
tests/: test_admin_router.py  test_demo_enhancements.py  test_error_handling.py  test_main.py  test_message_service.py  test_user_service.py
