[project]
name = "sih-health-chatbot-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "UTTAM-VAGHASIA",email = "the.uttam.vaghasia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

