[project]
name = "sih-health-chatbot-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "UTTAM-VAGHASIA",email = "the.uttam.vaghasia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501","E203","W503"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
